Fix spacing for Lnbc

--- a/src/components/Lnbc/Lnbc.module.scss
+++ b/src/components/Lnbc/Lnbc.module.scss
@@ -8,6 +8,7 @@
   gap: 6px;
   padding: 12px;
   position: relative;
+  margin-top: 8px;
 
   .paymentOverlay {
     position: absolute;
